加入了paper的filter相关方法,为后续build graph 做准备.